--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,6 @@ android {
 dependencies {
 
     //Added version numbers
-    def lifecycle_version = "2.1.0"
     def room_version = "2.2.3"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -45,13 +44,13 @@ dependencies {
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
-    implementation 'com.google.firebase:firebase-analytics:17.2.2'
-    
-    //Room Library
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
-    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+    implementation 'com.google.firebase:firebase-analytics:17.4.2'
 
+    //Room Library
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
+
+    /*admob ads*/
+    implementation 'com.google.android.gms:play-services-ads:19.1.0'
 
 }
