--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,10 +25,6 @@ android {
 }
 
 dependencies {
-
-    //Added version numbers
-    def room_version = "2.2.3"
-
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
@@ -42,16 +38,16 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
 
     implementation 'com.github.khizar1556.MKVideoPlayer:mkvideoplayer:0.1.5'
-
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-
     implementation 'com.google.firebase:firebase-analytics:17.4.2'
-
-    //Room Library
-    implementation "androidx.room:room-runtime:$room_version"
-    annotationProcessor "androidx.room:room-compiler:$room_version"
 
     /*admob ads*/
     implementation 'com.google.android.gms:play-services-ads:19.1.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+    /*Add youtube player*/
+    implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:10.0.5'
 
 }
